--- a/index.html
+++ b/index.html
@@ -1,16 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+---
+title: Homepage
+layout: default
+---
 
-</head>
-<body>
-    <section class="banner">
+
+ <section class="banner">
         <div class="banner__text">
             <img class="banner__logo" src="/images/main-logo.png" alt="">
             <h1 class="banner__headline">HACKMEMPHIS 2018 IS SEPTEMBER 28-30</h1>
@@ -26,13 +20,7 @@
     </section>
     <section class="sponsors">
         <h3 class="sponsors__headline">Our 2018 Sponsors</h3>
-
         <a href="http://memphistechnology.org"><img src="/images/mtf.png" alt="" srcset=""></a>
         <a href="http://memphistechnology.org"><img src="/images/makers.png" alt="" srcset=""></a>
         <a href="#" class="button sponsors__button">Become a sponsor</a>
     </section>
-    <section class="footer">
-        &copy 2018 HACKmemphis
-    </section>
-</body>
-</html>
