--- a/index.html
+++ b/index.html
@@ -1,26 +1,7 @@
 ---
 title: Homepage
 layout: default
+mainHeadline: HACKMEMPHIS 2018 IS SEPTEMBER 28-30
+mainSubhead: 2018 is looking to be bigger and better than ever! Buy your tickets now for a weekend of hacking, making and connecting.
+missionStatement: Mission Statement
 ---
-
-
- <section class="banner">
-        <div class="banner__text">
-            <img class="banner__logo" src="/images/main-logo.png" alt="">
-            <h1 class="banner__headline">HACKMEMPHIS 2018 IS SEPTEMBER 28-30</h1>
-            <h2 class="banner__subhead">2018 is looking to be bigger and better than ever! Buy your tickets now for a weekend of hacking, making and connecting.</h2>
-            <a href="#" class="button">Buy Your Tickets Now</a>
-        </div>
-    </section>
-    <section class="about">
-        <div class="max-width">
-            <h3 class="about__headline">About HACKmemphis</h3>
-            <p class="about__paragraph">Mission Statement</p>
-        </div>
-    </section>
-    <section class="sponsors">
-        <h3 class="sponsors__headline">Our 2018 Sponsors</h3>
-        <a href="http://memphistechnology.org"><img src="/images/mtf.png" alt="" srcset=""></a>
-        <a href="http://memphistechnology.org"><img src="/images/makers.png" alt="" srcset=""></a>
-        <a href="#" class="button sponsors__button">Become a sponsor</a>
-    </section>
