Adds Banner Link as editable

--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@ title: Homepage
 layout: default
 mainHeadline: HACKMEMPHIS 2018 IS SEPTEMBER 28-30
 mainSubhead: 2018 is looking to be bigger and better than ever! Buy your tickets now for a weekend of hacking, making and connecting.
+mainLink: #
+mainLinkText: Buy Your Tickets Now
 missionStatement: Mission Statement
 ---
