Adds sponsor link controls

--- a/index.html
+++ b/index.html
@@ -6,4 +6,6 @@ mainSubhead: 2018 is looking to be bigger and better than ever! Buy your tickets
 mainLink: #
 mainLinkText: Buy Your Tickets Now
 missionStatement: Mission Statement
+sponsorLink: #
+sponsorLinkText: Become a Sponsor
 ---
