--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 ---
-title: Homepage
 layout: default
+title: Homepage
 mainHeadline: HACKMEMPHIS 2018 IS SEPTEMBER 28-30
-mainSubhead: 2018 is looking to be bigger and better than ever! Buy your tickets now for a weekend of hacking, making and connecting.
-mainLink: #
+mainSubhead: >-
+  2018 is looking to be bigger and better than ever! Buy your tickets now for a
+  weekend of hacking, making and connecting.
 mainLinkText: Buy Your Tickets Now
+mainLink: '#'
 missionStatement: Mission Statement
-sponsorLink: #
 sponsorLinkText: Become a Sponsor
+sponsorLink: '#'
 ---
+
