--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ mainHeadline: HACKMEMPHIS 2018 IS SEPTEMBER 28-30
 mainSubhead: >-
   2018 is looking to be bigger and better than ever! Buy your tickets now for a
   weekend of hacking, making and connecting.
+mainBgImage: /images/printergray.png
 mainLinkText: Buy Your Tickets Now
 mainLink: '#'
 missionStatement: Mission Statement
