--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@ mainSubhead: >-
 mainBgImage: /images/printergray.png
 mainLinkText: Buy Your Tickets Now
 mainLink: '#'
-missionStatement: Mission Statement
+missionStatement: >+
+  HACKmemphis is an organization that hosts a weekend hackathon event. We
+  encourage developers and designers of any background (or technology) to come
+  together to work on whatever projects interest them. HACKmemphis is a free
+  form weekend of hacking on software and hardware projects.
+
+
+  HACKmemphis is organized by a group in Memphis comprised of developers,
+  makers, hackers, and local tech community supporters. We all want to see the
+  local tech scene in Memphis thrive. We are a mutual nonprofit organization.
+  This is a nonprofit venture. All money raised goes directly into creating the
+  best event possible.
+
 sponsorLinkText: Become a Sponsor
 sponsorLink: '#'
 ---
