Update Pages “homepage”

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@ layout: default
 title: Homepage
 mainHeadline: HACKMEMPHIS 2018 IS SEPTEMBER 28-30
 mainSubhead: >-
-  2018 is looking to be bigger and better than ever! Buy your tickets now for a
-  weekend of hacking, making and connecting.
+  2018 is looking to be bigger and better than ever! Tickets will be on sale
+  soon!
 mainBgImage: /images/printergray.png
 mainLinkText: Buy Your Tickets Now
-mainLink: '#'
+mainLink: ''
 missionStatement: >-
   HACKmemphis is an organization that hosts a weekend hackathon event. We
   encourage developers and designers of any background (or technology) to come
