Update Pages “homepage”

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ mainSubhead: >-
   soon!
 mainBgImage: /images/printergray.png
 mainLinkText: Buy Your Tickets Now
-mainLink: ""
+mainLink: ''
 missionStatement: >-
   HACKmemphis is an organization that hosts a weekend hackathon event. We
   encourage developers and designers of any background (or technology) to come
@@ -21,6 +21,6 @@ missionStatement: >-
   This is a nonprofit venture. All money raised goes directly into creating the
   best event possible.
 sponsorLinkText: Become a Sponsor
-sponsorLink: '#'
+sponsorLink: /images/prospectus.pdf
 ---
 
