--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ mainSubhead: >-
   soon!
 mainBgImage: /images/printergray.png
 mainLinkText: Buy Your Tickets Now
-mainLink: ''
+mainLink: 'https://www.eventbrite.com/e/hackmemphis-2018-tickets-47741076846'
 missionStatement: >-
   HACKmemphis is an organization that hosts a weekend hackathon event. We
   encourage developers and designers of any background (or technology) to come
