Update Pages “homepage”

--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 layout: default
 title: Homepage
 mainHeadline: HACKMEMPHIS 2018 IS SEPTEMBER 28-30
-mainSubhead: >-
-  2018 is looking to be bigger and better than ever! Tickets will be on sale
-  soon!
+mainSubhead: 2018 is looking to be bigger and better than ever! Tickets on sale now!
 mainBgImage: /images/printergray.png
 mainLinkText: Buy Your Tickets Now
 mainLink: 'https://www.eventbrite.com/e/hackmemphis-2018-tickets-47741076846'
