--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 layout: default
 title: Homepage
 mainHeadline: HACKMEMPHIS 2018 IS SEPTEMBER 28-30
-mainSubhead: 2018 is looking to be bigger and better than ever! Tickets on sale now!
+mainSubhead: >-
+  2018 is looking to be bigger and better than ever! Tickets on sale now! Hosted
+  at the FedEx Institute of Technology on the University of Memphis campus.
 mainBgImage: /images/printergray.png
 mainLinkText: Buy Your Tickets Now
 mainLink: 'https://www.eventbrite.com/e/hackmemphis-2018-tickets-47741076846'
